delete: non-existing path

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ Datasets
 *.ods
 **/.ipynb_checkpoints
 **/Datasets/
+**/Dataset/
 **/Figures/
 **/Models/
 **/data/
 **/UAP/
 **/*.mp4
 **/*.pth
-NB10-0724/Outputs
