patch: a simple documentation (more like a friendly advise) for path recognition

--- a/SuperstarGAN/src/.env
+++ b/SuperstarGAN/src/.env
@@ -1,6 +1,9 @@
-SUPERSTARGAN_IMAGENET_RESULT='../results/imagenet'
-SUPERSTARGAN_IMAGENET_TRANSFORMED='../results-transformed/imagenet'
-IMAGENET_PATH='../../../Datasets/ImageNet5/Images'
-IMAGENET_MAPPING_CLASS='../../../Datasets/ImageNet5/image_to_class.txt'
-CLASSIFICATION_LOGS='../logs/classification'
-IMAGENET_VGG_MODEL='../models/vgg16/modelvgg16-imagenet4.pt'
+# If you run this through 'run-evaluation.sh', please be aware
+# that you may need to adjust the relative paths (typically one level up).
+
+SUPERSTARGAN_IMAGENET_RESULT='results/imagenet'
+SUPERSTARGAN_IMAGENET_TRANSFORMED='results-transformed/imagenet'
+IMAGENET_PATH='../../Datasets/ImageNet5/Images'
+IMAGENET_MAPPING_CLASS='../../Datasets/ImageNet5/image_to_class.txt'
+CLASSIFICATION_LOGS='logs/classification'
+IMAGENET_VGG_MODEL='models/vgg16/modelvgg16-imagenet4.pt'
